--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		
 		<script type="text/javascript">
 			$(function(){
-				$("div.text").texteditor();
+				$("div.text").simpleEdit();
 			});
 		</script>
 	</head>
