default text taken from DOM

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<body>
 		<div class="main">
 			<h1>Simple HTML5 Editor</h1>
-			<div class="text"></div>
+			<div class="text">Lorem Ipsum Dolor..</div>
 			<span></span>
 		</div>
 	</body>
