--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 		<script src="editor.jquery.js"></script>
 		
+		<style type="text/css">
+			body {background:#f0f0f0; font-family:"Arial", "Helvetica", Sans-Serif;color:#333}
+			h1 {text-align:center; font-size:18px}
+			.main {width:400px;margin:100px auto}
+		</style>
+		
 		<script type="text/javascript">
 			$(function(){
 				$("div.text").simpleEdit();
@@ -14,13 +20,11 @@
 		</script>
 	</head>
 	<body>
-
 		<div class="main">
 			<h1>Simple HTML5 Editor</h1>
 			<div class="text">Lorem Ipsum Dolor..</div>
 			<span></span>
 		</div>
-		<footer>Developement by <a href="http://www.inlovewithcss.com/" target="_blank">mlabod</a> & design by <a href="http://twitter.com/Noxdzine" target="_blank">Noxdzine</a></footer>
 		
 		<a href="http://github.com/mlabod/simple-edit">	
 			<img style="position: absolute; top: 0; right: 0; border: 0;" src="https://gs1.wac.edgecastcdn.net/80460E/assets/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub">
