more text for the "text area"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
 
 		<div class="main">
 			<h1>Simple HTML5 Editor</h1>
-			<div class="text">Lorem Ipsum Dolor..</div>
+			<div class="text">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+				sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+				Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+			</div>
 			<span></span>
 		</div>
 		<footer>Developement by <a href="http://www.inlovewithcss.com/" target="_blank">mlabod</a> & design by <a href="http://twitter.com/Noxdzine" target="_blank">Noxdzine</a></footer>
