small design changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<footer>
 			Developement by 
 			<a href="http://www.inlovewithcss.com/" target="_blank">mlabod</a> 
-			& design by 
+			& design improved by 
 			<a href="http://twitter.com/Noxdzine" target="_blank">Noxdzine</a>
 			
 			<br><br>
