--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 		<footer>
 			Developement by 
-			<a href="http://www.inlovewithcss.com/" target="_blank">mlabod</a> 
+			<a href="http://www.inlovewithcss.com" target="_blank">inlovewithcss</a> 
 			& design improved by 
 			<a href="http://twitter.com/Noxdzine" target="_blank">Noxdzine</a>
 			
