small changed url and included github banner again

--- a/index.html
+++ b/index.html
@@ -26,22 +26,15 @@
 		</div>
 		
 		<footer>
-			Developement by 
-			<a href="http://www.inlovewithcss.com" target="_blank">inlovewithcss</a> 
-			& design improved by 
-			<a href="http://twitter.com/Noxdzine" target="_blank">Noxdzine</a>
+			Developement by <a href="http://www.twitter.com/ilwcss" target="_blank">inlovewithcss</a> 
+			&amp; design improved by <a href="http://twitter.com/Noxdzine" target="_blank">Noxdzine</a>
 			
 			<br><br>
       		<a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="ilwcss">Tweet</a>
       		<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>		
 		</footer>
 		
-		
 		<a href="http://github.com/mlabod/simple-edit">	
-			<img style="position: absolute; top: 0; right: 0; border: 0;" src="https://gs1.wac.edgecastcdn.net/80460E/assets/img/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub">
+			<img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/camo.github.com/e6bef7a091f5f3138b8cd40bc3e114258dd68ddf/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub">
 		</a>
-		
-		
-		
-	</body>
 </html>
