--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</div>
 		
 		<footer>
-			Developement by <a href="http://www.twitter.com/ilwcss" target="_blank">inlovewithcss</a> 
+			Developement by <a href="http://www.twitter.com/ilwcss" target="_blank">ilwcss</a>
 			&amp; design improved by <a href="http://twitter.com/Noxdzine" target="_blank">Noxdzine</a>
 			
 			<br><br>
