--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 			<h1>Simple HTML5 Editor</h1>
 			<div class="text">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-				sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+				sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+				Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 				Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 			</div>
 			<span></span>
